[gd_scene load_steps=8 format=3 uid="uid://c7slg3lkmxhhf"]

[ext_resource type="Script" path="res://camera/main_camera.gd" id="1_pvlkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbyuu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wy0nj"]
bg_color = Color(0.92549, 0.419608, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0w4u3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcbo0"]
bg_color = Color(0, 0.956863, 0.215686, 0.443137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhgdk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urufu"]
bg_color = Color(0.839216, 0.733333, 0.501961, 1)

[node name="MainCamera" type="Camera3D"]
script = ExtResource("1_pvlkv")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 22.0
offset_right = 370.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_jbyuu")
theme_override_styles/fill = SubResource("StyleBoxFlat_wy0nj")
value = 100.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 49.0
offset_right = 370.0
offset_bottom = 76.0
theme_override_styles/background = SubResource("StyleBoxFlat_0w4u3")
theme_override_styles/fill = SubResource("StyleBoxFlat_kcbo0")
value = 100.0
show_percentage = false

[node name="HungerBar" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 76.0
offset_right = 370.0
offset_bottom = 103.0
theme_override_styles/background = SubResource("StyleBoxFlat_uhgdk")
theme_override_styles/fill = SubResource("StyleBoxFlat_urufu")
value = 100.0
show_percentage = false
